--- a/public/books/bromberg.html
+++ b/public/books/bromberg.html
@@ -153,7 +153,7 @@
   <div class="wrap">
     <header>
       <div>
-        <h1 data-lang-key="app_title">📖 ספר משפחתי דיגיטלי — Moshe Haim Bromberg</h1>
+        <h1 data-lang-key="app_title">📖 ספר משפחתי דיגיטלי —משפחת ברומברג</h1>
         <p data-lang-key="header_desc">עץ יוּחָסין — צאצאים וענפים. ניתן להרחיב כל ענף.</p>
       </div>
     </header>
@@ -748,10 +748,10 @@
     const translations = {
       // General UI Texts
       app_title: {
-        he: "ספר משפחתי דיגיטלי — Moshe Haim Bromberg",
-        en: "Digital Family Book — Moshe Haim Bromberg",
-        fr: "Livre de Famille Numérique — Moshe Haim Bromberg",
-        yi: "דיגיטאַל פאַמיליע בוך — Moshe Haim Bromberg"
+        he: "ספר משפחתי דיגיטלי —משפחת ברומברג",
+        en: "Digital Family Book — Bromberg Family",
+        fr: "Livre de Famille Numérique — Bromberg Famillie",
+        yi: "דיגיטאַל פאַמיליע בוך — פאמיליע ברומברג"
       },
       header_desc: {
         he: "עץ יוּחָסין — צאצאים וענפים. ניתן להרחיב כל ענף.",
