--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
 
         <section class="hero-image">
             <!-- FIX: Replaced broken image link with a placeholder -->
-            <img src="https://placehold.co/1200x400/0057a3/ffffff?text=תמונה+משפחתית" alt="תמונת משפחה" class="w-full h-auto rounded-3xl shadow-xl transition-transform duration-500 hover:scale-[1.01]" />
+            <img src="our-family-tree.onrender.com/family-hero.png" alt="תמונת משפחה" class="w-full h-auto rounded-3xl shadow-xl transition-transform duration-500 hover:scale-[1.01]" />
         </section>
     </main>
 
