--- a/public/book.html
+++ b/public/book.html
@@ -1,9 +1,108 @@
 <!DOCTYPE html>
-<html lang="he">
-<head><meta charset="UTF-8"><title>ספר משפחתי</title></head>
-<body>
-<h2>ספר משפחתי דיגיטלי</h2>
-<p>כאן יוצגו סיפורי המשפחה, ביוגרפיות, תמונות וקבצי PDF להורדה.</p>
-<a href="family-book.pdf" download>הורד את הספר (PDF)</a>
+<html lang="he" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ספר המשפחה</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6;
+        }
+        /* Full-screen loading overlay */
+        #loading-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(243, 244, 246, 0.95);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 50;
+        }
+    </style>
+</head>
+<body class="bg-gray-100">
+
+    <!-- Full-screen loading overlay -->
+    <div id="loading-container" class="flex flex-col items-center justify-center">
+        <svg class="animate-spin h-12 w-12 text-blue-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+        </svg>
+        <p class="text-gray-600 mt-4 text-lg">טוען נתוני משתמש...</p>
+    </div>
+
+    <!-- Container for the main application content -->
+    <div id="main-content" class="hidden flex items-center justify-center min-h-screen p-4">
+        <div class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-2xl text-center">
+            <h1 class="text-4xl font-bold text-gray-800 mb-6">ספר המשפחה</h1>
+
+            <!-- User Details Section -->
+            <div class="bg-gray-50 p-6 rounded-xl border border-gray-200 mb-6 text-right">
+                <h2 class="text-2xl font-semibold text-gray-700 mb-4">פרטי המשתמש שלך:</h2>
+                <p id="userName" class="text-lg text-gray-600 mb-2"><strong>שם:</strong> <span class="font-medium"></span></p>
+                <p id="userFamilySide" class="text-lg text-gray-600"><strong>צד משפחתי:</strong> <span class="font-medium"></span></p>
+            </div>
+
+            <!-- Family Book Content Section -->
+            <div id="familyBookContent" class="bg-gray-50 p-6 rounded-xl border border-gray-200 text-right">
+                <!-- Content will be dynamically loaded here -->
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // Use window.onload to ensure the DOM is fully loaded before running the script
+        window.onload = async function() {
+            const loadingContainer = document.getElementById('loading-container');
+            const mainContent = document.getElementById('main-content');
+            const userNameSpan = document.querySelector('#userName span');
+            const userFamilySideSpan = document.querySelector('#userFamilySide span');
+            const familyBookContent = document.getElementById('familyBookContent');
+
+            try {
+                // Fetch user data from the real API endpoint
+                const response = await fetch('/api/user');
+
+                if (!response.ok) {
+                    throw new Error(`שגיאת HTTP: ${response.status}`);
+                }
+
+                const user = await response.json();
+
+                // Display user details
+                userNameSpan.textContent = user.name;
+                userFamilySideSpan.textContent = user.familySide;
+
+                // Now, fetch the content of the specific family book file
+                const familyBookUrl = `books/${user.familySide}.html`;
+                const bookResponse = await fetch(familyBookUrl);
+
+                if (!bookResponse.ok) {
+                    throw new Error(`שגיאת HTTP בטעינת הקובץ: ${bookResponse.status}`);
+                }
+                
+                const bookContent = await bookResponse.text();
+
+                // Inject the content into the main page
+                familyBookContent.innerHTML = bookContent;
+
+            } catch (error) {
+                // Handle any errors that occur during the fetch process
+                console.error("שגיאה בטעינת הנתונים:", error);
+                loadingContainer.innerHTML = `<p class="text-red-500 text-lg">אירעה שגיאה בטעינת הנתונים: ${error.message}</p>`;
+                return; // Stop execution to prevent showing the main content
+            }
+
+            // Hide the loading overlay and show the main content
+            loadingContainer.classList.add('hidden');
+            mainContent.classList.remove('hidden');
+        };
+    </script>
 </body>
 </html>
