--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                 </select>
             </div>
             <!-- FIX: Replaced broken image link with a placeholder -->
-            <img src="our-family-tree.onrender.com/assets/logo.png" alt="לוגו משפחתי" class="logo mx-auto mb-4 w-24 h-24 rounded-full" />
+            <img src="/assets/logo.png" alt="לוגו משפחתי" class="logo mx-auto mb-4 w-24 h-24 rounded-full" />
             <h1 id="welcomeTitle" class="text-3xl md:text-5xl drop-shadow-lg animate-fade-in-down">ברוכים הבאים לאתר המשפחה</h1>
             <h2 id="welcomeSubtitle" class="text-lg md:text-xl mt-2 drop-shadow-md animate-fade-in-up">Ben Abou • Elharrar • Malca • ועוד</h2>
         </div>
