--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
            Styling is applied directly using Tailwind classes on the elements. */
     </style>
     <!-- NOTE: It's best to use only one chat widget. I'm keeping Chatway and commenting out the others. -->
-    <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=vJrCwuXPSFOm"></script>
+    <!--<script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=vJrCwuXPSFOm"></script>
     <script src="//code.tidio.co/wnmxintabp8xi2frtmizt5q9sopbk32o.js" async></script>
     <!-- <script type="text/javascript">
     (function(d, m){
@@ -76,9 +76,9 @@
     <nav class="menu-bar bg-white/80 backdrop-blur-md sticky top-0 z-50 flex flex-wrap justify-center p-2 md:p-4 gap-2 md:gap-4 shadow-lg rounded-b-2xl transition-all duration-300">
         <a id="menuHome" href="/" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">🏠 עמוד ראשי</a>
         <a id="menuUpdates" href="about.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>ℹ️</span> עמוד העדכונים</a>
-        <a id="menuTree" href="/tree.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>🧬</span> עץ המשפחה</a>
+        <a id="menuTree" href="/tree-viewer.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>🧬</span> עץ המשפחה</a>
         <!-- FIX: The <a> tag for "ספר משפחתי" was not closed. It is now fixed. -->
-        <a id="menuBooks" href="/family-book.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📖</span>ספר משפחתי</a>
+        <a id="menuBooks" href="/book.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📖</span>ספר משפחתי</a>
         <a id="menuChat" href="/chat.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>🧑‍💻</span> צ'אט AI</a>
         <a id="menuContact" href="/contact-ways.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📩</span> אמצעי תקשורת משפחתיים</a>
         <a id="menuGallery" href="/gallery.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>🖼️</span> גלריית תמונות</a>
