--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
            Styling is applied directly using Tailwind classes on the elements. */
     </style>
     <!-- NOTE: It's best to use only one chat widget. I'm keeping Chatway and commenting out the others. -->
-    <!--<script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=vJrCwuXPSFOm"></script>
+    <!--<script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=vJrCwuXPSFOm"></script>-->
     <script src="//code.tidio.co/wnmxintabp8xi2frtmizt5q9sopbk32o.js" async></script>
     <!-- <script type="text/javascript">
     (function(d, m){
