--- a/public/trees/bromberg.html
+++ b/public/trees/bromberg.html
@@ -139,16 +139,16 @@
             { "id": "228", "name": "Dora Browne", "gender": "F", "spouse_id": "227", "parent_ids": [], "children_ids": ["210", "211", "214", "215", "217"], "birth_year": null, "death_year": null },
             { "id": "229", "name": "Shmuel Bromberg", "gender": "M", "spouse_id": "230", "parent_ids": ["231", "232"], "children_ids": ["218", "220", "222", "223", "224"], "birth_year": null, "death_year": null },
             { "id": "230", "name": "Rivkah Birenbaum", "gender": "F", "spouse_id": "229", "parent_ids": [], "children_ids": ["218", "220", "222", "223", "224"], "birth_year": null, "death_year": null },
-            { "id": "222", "name": "David Bromberg", "gender": "M", "parent_ids": ["229", "230"], "birth_year": null, "death_year": null },
-            { "id": "223", "name": "Rachel Bromberg", "gender": "F", "parent_ids": ["229", "230"], "birth_year": null, "death_year": null },
-            { "id": "224", "name": "Abraham Abba Bromberg", "gender": "M", "parent_ids": ["229", "230"], "birth_year": null, "death_year": null },
+            { "id": "222", "name": "David Bromberg", "gender": "M", "parent_ids": ["229", "230"], "birth_year": "1918", "death_year": null },
+            { "id": "223", "name": "Rachel Bromberg", "gender": "F", "parent_ids": ["229", "230"], "birth_year": "1920", "death_year": null },
+            { "id": "224", "name": "Abraham Abba Bromberg", "gender": "M", "parent_ids": ["229", "230"], "birth_year": "1922", "death_year": null },
             { "id": "200", "name": "Toby Ruth Kasner Zeavin", "gender": "F", "spouse_id": "201", "parent_ids": ["225", "226"], "children_ids": ["158", "162", "164"], "birth_year": "Oct 20, 1903", "death_year": "Nov 26, 1990" },
             { "id": "201", "name": "Samuel Zeavin", "gender": "M", "spouse_id": "200", "children_ids": ["158", "162", "164"], "birth_year": "Aug 23, 1901", "death_year": "Mar 31, 1991" },
-            { "id": "202", "name": "Samuel Kasner", "gender": "M", "spouse_id": "203", "parent_ids": ["225", "226"], "children_ids": ["168", "170"], "birth_year": null, "death_year": null },
+            { "id": "202", "name": "Samuel Kasner", "gender": "M", "spouse_id": "203", "parent_ids": ["225", "226"], "children_ids": ["168", "170"], "birth_year": "Sep 26 1909", "death_year": null },
             { "id": "203", "name": "Anne Ostrofsky", "gender": "F", "spouse_id": "202", "children_ids": ["168", "170"], "birth_year": null, "death_year": null },
             { "id": "204", "name": "Maurice Kasner", "gender": "M", "spouse_id": "205", "parent_ids": ["225", "226"], "children_ids": ["171"], "birth_year": null, "death_year": null },
-            { "id": "205", "name": "Violet Lillian Ballard", "gender": "F", "spouse_id": "204", "children_ids": ["171"], "birth_year": null, "death_year": null },
-            { "id": "206", "name": "Florence Kasner", "gender": "F", "spouse_id": "207", "parent_ids": ["225", "226"], "children_ids": ["174"], "birth_year": null, "death_year": null },
+            { "id": "205", "name": "Violet Lillian Ballard", "gender": "F", "spouse_id": "204", "children_ids": ["171"], "birth_year": "1916", "death_year": "2009" },
+            { "id": "206", "name": "Florence Kasner", "gender": "F", "spouse_id": "207", "parent_ids": ["225", "226"], "children_ids": ["174"], "birth_year": "1914, "death_year": "1996" },
             { "id": "207", "name": "Sidney Freedman", "gender": "M", "spouse_id": "206", "children_ids": ["174"], "birth_year": null, "death_year": null },
             { "id": "208", "name": "Rose Kasner", "gender": "F", "spouse_id": "209", "parent_ids": ["225", "226"], "children_ids": ["176", "178"], "birth_year": null, "death_year": null },
             { "id": "209", "name": "Max Kaplan", "gender": "M", "spouse_id": "208", "children_ids": ["176", "178"], "birth_year": null, "death_year": null },
