--- a/public/family-stats.html
+++ b/public/family-stats.html
@@ -13,6 +13,7 @@
 <body>
   <h1>📊 סטטיסטיקות משפחתיות</h1>
   <div class="chart-container">
+    <div class="data.filter">
     <canvas id="genderChart"></canvas>
   </div>
   <div class="chart-container">
