--- a/public/family-stats.html
+++ b/public/family-stats.html
@@ -13,7 +13,7 @@
 <body>
   <h1>📊 סטטיסטיקות משפחתיות</h1>
   <div class="chart-container">
-    <div class="data.filter">
+    <div class="data.filter"></div>
     <canvas id="genderChart"></canvas>
   </div>
   <div class="chart-container">
@@ -23,6 +23,7 @@
   <script>
     // טען נתוני JSON (לפי צד משפחה)
     fetch("/data/ben_abou.json") // לדוגמה
+      fetch("/data/Bromberg.json")
       .then(res => res.json())
       .then(data => {
         const males = data.filter(p => p.gender === "M").length;
@@ -39,6 +40,11 @@
             }]
           }
         });
+        if (!Array.isArray(data)) {
+  console.error("הנתונים אינם מערך:", data);
+  return;
+}
+
 
         const generations = {};
         data.forEach(p => {
