--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -139,7 +139,7 @@
     <header class="text-center mb-8">
         <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800">🌳 Family Tree: Descendants of Moshe Haim Bromberg</h1>
         <p class="text-lg text-gray-600 mt-2">Tracking seven generations from the provided list.</p>
-        <p class="text-sm text-green-700 mt-2 font-bold">The note about Beverly Anne Zeavin's marriages has been removed.</p>
+        <p class="text-sm text-green-700 mt-2 font-bold">The Family Tree is updated to October 2025, 1/5786</p>
     </header>
 
     <div class="overflow-x-auto shadow-lg bg-white rounded-xl p-4">
