--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -307,14 +307,14 @@
             { "id": "197", "name": "Aryeh Junger", "gender": "M", "spouse_id": "196", "children_ids": ["143", "145", "147", "149", "151"], "birth_year": null, "death_year": null },
             { "id": "198", "name": "Shmuel Bromberg", "gender": "M", "spouse_id": "199", "parent_ids": ["220", "221"], "children_ids": ["152", "154", "156"], "birth_year": null, "death_year": null },
             { "id": "199", "name": "Chana Noa Izaks", "gender": "F", "spouse_id": "198", "children_ids": ["152", "154", "156"], "birth_year": null, "death_year": null },
-            { "id": "138", "name": "Noah Pilosof", "gender": "M", "parent_ids": ["194", "195"], "birth_year": null, "death_year": null },
+            { "id": "138", "name": "Noah Pilosof", "gender": "F", "parent_ids": ["194", "195"], "birth_year": null, "death_year": null },
             { "id": "139", "name": "Oren Pilosof", "gender": "M", "spouse_id": "140", "parent_ids": ["194", "195"], "children_ids": ["37"], "birth_year": null, "death_year": null },
             { "id": "140", "name": "Aya Unknown", "gender": "F", "spouse_id": "139", "children_ids": ["37"], "birth_year": null, "death_year": null },
             { "id": "141", "name": "Shai Pilosof", "gender": "M", "spouse_id": "142", "parent_ids": ["194", "195"], "children_ids": ["38", "39", "40"], "birth_year": null, "death_year": null },
             { "id": "142", "name": "Ms. Unknown", "gender": "F", "spouse_id": "141", "children_ids": ["38", "39", "40"], "birth_year": null, "death_year": null },
             { "id": "37", "name": "Ayala Pilosof", "gender": "F", "parent_ids": ["139", "140"], "birth_year": null, "death_year": null },
-            { "id": "38", "name": "Ofek Pilosof", "gender": "M", "parent_ids": ["141", "142"], "birth_year": null, "death_year": null },
-            { "id": "39", "name": "Gal Pilosof", "gender": "F", "parent_ids": ["141", "142"], "birth_year": null, "death_year": null },
+            { "id": "38", "name": "Ofek Pilosof", "gender": "F", "parent_ids": ["141", "142"], "birth_year": null, "death_year": null },
+            { "id": "39", "name": "Gal Pilosof", "gender": "M", "parent_ids": ["141", "142"], "birth_year": null, "death_year": null },
             { "id": "40", "name": "Agam Pilosof", "gender": "F", "parent_ids": ["141", "142"], "birth_year": null, "death_year": null },
             { "id": "143", "name": "Eran Junger", "gender": "M", "spouse_id": "144", "parent_ids": ["196", "197"], "children_ids": ["41", "42", "43", "44", "45", "46"], "birth_year": null, "death_year": null },
             { "id": "144", "name": "Anat Unknown", "gender": "F", "spouse_id": "143", "children_ids": ["41", "42", "43", "44", "45", "46"], "birth_year": null, "death_year": null },
@@ -338,34 +338,34 @@
             { "id": "55", "name": "Noam Junger", "gender": "M", "parent_ids": ["145", "146"], "birth_year": null, "death_year": null },
             { "id": "56", "name": "Daniel Junger", "gender": "M", "parent_ids": ["147", "148"], "birth_year": null, "death_year": null },
             { "id": "57", "name": "Amit Junger", "gender": "M", "parent_ids": ["147", "148"], "birth_year": null, "death_year": null },
-            { "id": "58", "name": "Yair Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
-            { "id": "60", "name": "Efrat Ben Moshe", "gender": "F", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
-            { "id": "61", "name": "Yoel Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
-            { "id": "62", "name": "Shilo Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
-            { "id": "63", "name": "Nir Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
-            { "id": "64", "name": "Hadas Ben Moshe", "gender": "F", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
+            { "id": "58", "name": "Yonatan Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
+            { "id": "60", "name": "Inon Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
+            { "id": "61", "name": "Malchut Ben Moshe", "gender": "F", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
+            { "id": "62", "name": "Ori Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
+            { "id": "63", "name": "Shir Ben Moshe", "gender": "F", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
+            { "id": "64", "name": "Yehuda Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
             { "id": "65", "name": "Noa Ben Moshe", "gender": "F", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
-            { "id": "66", "name": "Eliana Ben Moshe", "gender": "F", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
-            { "id": "68", "name": "Noga Ben Moshe", "gender": "F", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
-            { "id": "69", "name": "Amiel Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
-            { "id": "152", "name": "Efraim Bromberg", "gender": "M", "spouse_id": "153", "parent_ids": ["198", "199"], "children_ids": ["70", "71", "72", "73", "74"], "birth_year": null, "death_year": null },
-            { "id": "153", "name": "Yael Unknown", "gender": "F", "spouse_id": "152", "children_ids": ["70", "71", "72", "73", "74"], "birth_year": null, "death_year": null },
-            { "id": "154", "name": "Yair Bromberg", "gender": "M", "spouse_id": "155", "parent_ids": ["198", "199"], "children_ids": ["75", "76", "77", "78", "79", "80"], "birth_year": null, "death_year": null },
-            { "id": "155", "name": "Tali Unknown", "gender": "F", "spouse_id": "154", "children_ids": ["75", "76", "77", "78", "79", "80"], "birth_year": null, "death_year": null },
-            { "id": "156", "name": "Avital Bromberg", "gender": "F", "spouse_id": "157", "parent_ids": ["198", "199"], "children_ids": ["81"], "birth_year": null, "death_year": null },
-            { "id": "157", "name": "Yishai Unknown", "gender": "M", "spouse_id": "156", "children_ids": ["81"], "birth_year": null, "death_year": null },
-            { "id": "70", "name": "Shmuel Bromberg", "gender": "M", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
-            { "id": "71", "name": "Amichai Bromberg", "gender": "M", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
-            { "id": "72", "name": "Elkana Bromberg", "gender": "M", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
-            { "id": "73", "name": "Hadas Bromberg", "gender": "F", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
-            { "id": "74", "name": "Yoav Bromberg", "gender": "M", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
-            { "id": "75", "name": "Noam Bromberg", "gender": "F", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
-            { "id": "76", "name": "Mali Bromberg", "gender": "F", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
-            { "id": "77", "name": "Hallel Bromberg", "gender": "F", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
-            { "id": "78", "name": "Ofir Bromberg", "gender": "M", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
-            { "id": "79", "name": "Adi Bromberg", "gender": "M", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
-            { "id": "80", "name": "Netta Bromberg", "gender": "F", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
-            { "id": "81", "name": "Elay Unknown", "gender": "M", "parent_ids": ["156", "157"], "birth_year": null, "death_year": null }
+            { "id": "66", "name": "Noam Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
+            { "id": "68", "name": "Arie Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
+            { "id": "69", "name": "Tamar Ben Moshe", "gender": "F", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
+            { "id": "152", "name": "Noga Bromberg", "gender": "F", "spouse_id": "153", "parent_ids": ["198", "199"], "children_ids": ["70", "71", "72", "73", "74"], "birth_year": null, "death_year": null },
+            { "id": "153", "name": "Avi Grossman", "gender": "F", "spouse_id": "152", "children_ids": ["70", "71", "72", "73", "74"], "birth_year": null, "death_year": null },
+            { "id": "154", "name": "Merav Bromberg", "gender": "F", "spouse_id": "155", "parent_ids": ["198", "199"], "children_ids": ["75", "76", "77", "78"], "birth_year": null, "death_year": null },
+            { "id": "155", "name": "Yanai Ben Abou", "gender": "M", "spouse_id": "154", "children_ids": ["75", "76", "77", "78", "79", "80"], "birth_year": null, "death_year": null },
+            { "id": "156", "name": "Amitai Bromberg", "gender": "M", "spouse_id": "157", "parent_ids": ["198", "199"], "children_ids": ["79","80","81"], "birth_year": null, "death_year": null },
+            { "id": "157", "name": "Noga Amran", "gender": "F", "spouse_id": "156", "children_ids": ["79","80","81"], "birth_year": null, "death_year": null },
+            { "id": "70", "name": "Roi Grossman", "gender": "M", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
+            { "id": "71", "name": "Ma'ayan Grossman", "gender": "F", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
+            { "id": "72", "name": "Yishay Grossman", "gender": "M", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
+            { "id": "73", "name": "Eyal Grossman", "gender": "M", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
+            { "id": "74", "name": "Yael Grossman", "gender": "F", "parent_ids": ["152", "153"], "birth_year": null, "death_year": null },
+            { "id": "75", "name": "Yair Ben Abou", "gender": "M", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
+            { "id": "76", "name": "Avishai Ben Abou", "gender": "M", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
+            { "id": "77", "name": "Be'eri Ben Abou", "gender": "M", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
+            { "id": "78", "name": "Omer Ben Abou", "gender": "M", "parent_ids": ["154", "155"], "birth_year": null, "death_year": null },
+            { "id": "79", "name": "Ido Bromberg", "gender": "M", "parent_ids": ["156", "157"], "birth_year": null, "death_year": null },
+            { "id": "80", "name": "Hadas Bromberg", "gender": "F", "parent_ids": ["156", "157"], "birth_year": null, "death_year": null },
+            { "id": "81", "name": "Ariel Bromberg", "gender": "M", "parent_ids": ["156", "157"], "birth_year": null, "death_year": null }
         ];
 
         // Create a map for quick lookup
