--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -291,14 +291,15 @@
             { "id": "221", "name": "Rachel Witta Weinberger", "gender": "F", "spouse_id": "220", "children_ids": ["194", "196", "198"], "birth_year": null, "death_year": null },
             { "id": "189", "name": "Martin Myers", "gender": "M", "spouse_id": "190", "parent_ids": ["218", "219"], "children_ids": ["132", "34", "133"], "birth_year": null, "death_year": null },
             { "id": "190", "name": "Nancy Myers", "gender": "F", "spouse_id": "189", "children_ids": ["132", "34", "133"], "birth_year": null, "death_year": null },
+            { "id": "191", "name": "Patty Myers", "gender": "F", "spouse_id": "189", "children_ids": null, "birth_year": null, "death_year": null },
             { "id": "192", "name": "Karen Myers", "gender": "F", "spouse_id": "193", "parent_ids": ["218", "219"], "children_ids": ["136"], "birth_year": null, "death_year": null },
             { "id": "193", "name": "Bob Yukich", "gender": "M", "spouse_id": "192", "children_ids": ["136"], "birth_year": null, "death_year": null },
             { "id": "132", "name": "Carla Myers", "gender": "F", "parent_ids": ["189", "190"], "birth_year": null, "death_year": null },
-            { "id": "34", "name": "Peter Myers", "gender": "M", "parent_ids": ["189", "190"], "birth_year": null, "death_year": null },
-            { "id": "133", "name": "Rebecca Myers", "gender": "F", "spouse_id": "134", "parent_ids": ["189", "190"], "children_ids": ["35"], "birth_year": null, "death_year": null },
+            { "id": "34", "name": "Peter Myers", "gender": "M", "parent_ids": ["132"], "birth_year": null, "death_year": null },
+            {"id": "133", "name": "Rebecca Myers", "gender": "F", "spouse_id": ["134", "135"], "parent_ids": ["189", "190"], "children_ids": ["35", "36"], "birth_year": null, "death_year": null}
             { "id": "134", "name": "Scott Labby", "gender": "M", "spouse_id": "133", "children_ids": ["35"], "birth_year": null, "death_year": null },
             { "id": "35", "name": "Maren Labby", "gender": "F", "spouse_id": "135", "parent_ids": ["133", "134"], "children_ids": ["36"], "birth_year": null, "death_year": null },
-            { "id": "135", "name": "Seth Frader-Thompson", "gender": "M", "spouse_id": "35", "children_ids": ["36"], "birth_year": null, "death_year": null },
+            { "id": "135", "name": "Seth Frader-Thompson", "gender": "M", "spouse_id": "133", "children_ids": ["36"], "birth_year": null, "death_year": null },
             { "id": "36", "name": "Sam Frader-Thompson", "gender": "M", "parent_ids": ["35", "135"], "birth_year": null, "death_year": null },
             { "id": "136", "name": "Aaron Yukich", "gender": "M", "parent_ids": ["192", "193"], "birth_year": null, "death_year": null },
             { "id": "194", "name": "Rivka Bromberg", "gender": "F", "spouse_id": "195", "parent_ids": ["220", "221"], "children_ids": ["138", "139", "141"], "birth_year": null, "death_year": null },
